[package]
name = "actix-browser-rpc"
version = "0.1.0"
authors = ["Ian Purton <ian.purton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost-build = { version = "0.7", optional = true }
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

[features]
default = ["transport", "rustfmt", "prost"]
rustfmt = []
transport = []
prost = ["prost-build"]

[package.metadata.docs.rs]
all-features = true