[package]
name = "rust-grpc-web"
version = "0.1.0"
authors = ["Ian Purton <ian.purton@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost-build = { version = "0", optional = true }
syn = "1"
quote = "1"
proc-macro2 = "1"

[features]
default = ["transport", "rustfmt", "prost"]
rustfmt = []
transport = []
prost = ["prost-build"]

[package.metadata.docs.rs]
all-features = true