[package]
name = "examples"
version = "0.1.0"
authors = ["Ian Purton <ian.purton@gmail.com>"]
edition = "2018"
publish = true
license = "MIT"

[[bin]]
name = "helloworld-server"
path = "src/helloworld/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/helloworld/client.rs"

[dependencies]
actix-web = "4.0.0-beta.3"
actix-files = "0.6.0-beta.3"

env_logger = "0.8"

[build-dependencies]
actix-browser-rpc = { path = "../" }