[package]
name = "examples"
version = "0.1.0"
authors = ["Ian Purton <ian.purton@gmail.com>"]
edition = "2018"
publish = true
license = "MIT"

[[bin]]
name = "helloworld-server"
path = "src/helloworld/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/helloworld/client.rs"

[dependencies]
actix-web = "4.0.0-beta.3"
actix-files = "0.6.0-beta.3"
env_logger = "0.8"

prost = "0.7"
# Only necessary if using Protobuf well-known types:
#prost-types = "0.7"

base64 = "0.13.0"

# For the client to test
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
actix-browser-rpc = { path = "../" }