[package]
name = "rust-client"
version = "0.1.0"
authors = ["Ian Purton <ian.purton@gmail.com>"]
edition = "2018"
publish = true
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0"
prost = "0"

[build-dependencies]
rust-grpc-web = { path = "../../" }