[package]
version = "0.1.0"
name = "seed-wasm-grpc-web"
repository = "https://github.com/seed-rs/seed-quickstart"
authors = ["Ian Purton <ian.purton@gmail.com>"]
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.8.0"

# For gRPC-Web
prost = "0"
base64 = "0"
reqwest = { version = "0.11", default-features = false, features = ["rustls"] }
web-sys = "0"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']

[build-dependencies]
rust-grpc-web = { path = "../../" }