[package]
name = "tonic-envoy"
version = "0.1.0"
authors = ["Ian Purton <ian.purton@gmail.com>"]
edition = "2018"

[[bin]] # Bin to run the Quote gRPC server
name = "quote-server"
path = "src/server.rs"

[[bin]] # Bin to run the Quote gRPC client
name = "quote-client"
path = "src/client.rs"

[dependencies]
tonic = "0.4"
prost = "0.7"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }

async-stream = "0.2"

[build-dependencies]
tonic-build = "0.4"