[package]
name = "tonic-envoy"
version = "0.1.0"
authors = ["Ian Purton <ian.purton@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "1"
prost = "0.7"
structopt = "0.3.21"
tokio = { version = "1.2.0", features = ["full"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = "0.4"

[build-dependencies]
tonic-build = "0.4"