[package]
name = "yew-client"
version = "0.1.0"
authors = ["Ian Purton <ian.purton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.17"

# So we can use self.link.send_future(async move {...
yewtil = { version = "0.3.2", features = ["future"] }

# For rust-grpc-web
prost = "0"
reqwest = { version = "0.11" }
web-sys = "0"

[build-dependencies]
rust-grpc-web = { path = "../../" }